# opof-pomdp

./: .gitignore  CMakeLists.txt  README.md  pyrightconfig.json  setup.py
.github/workflows/: build_and_test.yml
pomdp_core/: pomdp_core.cpp
pomdp_core/carla/include/carla/geom/: Math.h
pomdp_core/macaron/: LICENSE
pomdp_core/magic/include/magic/core/: Belief.h  BezierCurve.h  PredictorBelief.h  RelaxedDubins.h  Types.h  Util.h  Vector2D.h
pomdp_core/magic/include/magic/core/planning/: DespotPlanner.h  PomcpowPlanner.h
pomdp_core/magic/include/magic/core/simulations/: LightDark.h  PuckPush.h  VdpTag.h
pomdp_core/magic/src/core/: BezierCurve.cpp  Util.cpp
pomdp_core/magic/src/core/random/: SplitMix64.cpp  XorShift128Plus.cpp
pomdp_core/magic/src/core/simulations/: LightDark.cpp  PuckPush.cpp  VdpTag.cpp
pomdp_core/opencv/: README.md
